# substrate-karaoke

./: Cargo.toml  task.txt
node/: Cargo.toml
node/src/: service.rs
pallets/karaoke/: Cargo.toml
pallets/karaoke/src/: lib.rs
pallets/sp_karaoke/: Cargo.toml
pallets/sp_karaoke/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
